# first-tdd-django

./: pyproject.toml
jmad/: db.sqlite3
jmad/jmad/: settings.py  tests.py  urls.py
jmad/solos/: urls.py  views.py
jmad/solos/tests/: tests_urls.py
jmad/templates/: about.html
