[tool.poetry]
name = "first_test"
version = "0.1.0"
description = "tdd with django"
authors = ["Eyong Kevin Enowanyo <tonyparkerkenz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
